# binary-greedy-meshing

./: Cargo.toml  LICENSE  README.md
benches/: mesh.rs  mesh_32.rs
examples/: sphere.rs  sphere_32.rs  transparency.rs
src/: face.rs  lib.rs  quad.rs
