[package]
name = "binary-greedy-meshing"
version = "0.4.2"
edition = "2024"
description = "A port of https://github.com/cgerikj/binary-greedy-meshing to Rust."
license = "MIT"
repository = "https://github.com/Inspirateur/binary-greedy-meshing"
keywords = ["meshing", "greedy", "binary", "voxel", "chunk"]

[dependencies]

[dev-dependencies]
bevy = "0.16"
criterion = "0.5"

[[bench]]
name = "mesh"
harness = false
