[package]
name = "binary-greedy-meshing"
version = "0.5.2"
edition = "2024"
description = "A port of https://github.com/cgerikj/binary-greedy-meshing to Rust."
license = "MIT"
repository = "https://github.com/Inspirateur/binary-greedy-meshing"
keywords = ["meshing", "greedy", "binary", "voxel", "chunk"]

[dependencies]

[dev-dependencies]
bevy = "0.16.1"
criterion = "0.6"

[[bench]]
name = "mesh"
harness = false
